--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^7.3.0",
     "morgan": "1.10.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.3",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
